--- a/sell/src/main/res/layout/price_output_fragment.xml
+++ b/sell/src/main/res/layout/price_output_fragment.xml
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <kg.nurtelecom.ofd.sell.CardViewSell
+    <kg.nurtelecom.ofd.sell.CustomCardEditText
         android:id="@+id/price_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -26,7 +26,7 @@
         app:layout_constraintTop_toBottomOf="@id/position_tv" />
 
 
-    <kg.nurtelecom.ofd.sell.CardViewSell
+    <kg.nurtelecom.ofd.sell.CustomCardEditText
         android:id="@+id/count_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -45,7 +45,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/count_edit_text">
 
-        <kg.nurtelecom.ofd.sell.CardViewSell
+        <kg.nurtelecom.ofd.sell.CustomCardEditText
             android:id="@+id/skidka_edit_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -55,7 +55,7 @@
             app:layout_constraintStart_toStartOf="@id/count_edit_text"
             app:layout_constraintTop_toBottomOf="@id/count_edit_text" />
 
-        <kg.nurtelecom.ofd.sell.CardViewSell
+        <kg.nurtelecom.ofd.sell.CustomCardEditText
             android:id="@+id/allowance_edit_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
