--- a/ui/src/main/res/layout/card_view_sell.xml
+++ b/ui/src/main/res/layout/card_view_sell.xml
@@ -32,6 +32,7 @@
             android:background="@null"
             android:hint="@string/zero"
             android:inputType="numberDecimal"
+            android:textColorHint="@color/colorLightGrey"
             app:layout_constraintEnd_toStartOf="@id/card_next_icon"
             app:layout_constraintStart_toStartOf="@id/card_title"
             app:layout_constraintTop_toBottomOf="@id/card_title" />
