--- a/auth/src/main/res/layout/auth_activity.xml
+++ b/auth/src/main/res/layout/auth_activity.xml
@@ -12,13 +12,7 @@
         android:orientation="vertical"
         android:layout_centerInParent="true">
 
-        <ProgressBar
-            android:id="@+id/progressbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <kg.nurtelecom.ofd.edittext.EditTextField
-            android:inputType="text"
+        <EditText
             android:id="@+id/et_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
