--- a/sell/src/main/res/layout/price_output_fragment.xml
+++ b/sell/src/main/res/layout/price_output_fragment.xml
@@ -17,92 +17,64 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/product_price_cw"
+    <kg.nurtelecom.ofd.sell.CustomCardEditText
+        android:id="@+id/price_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/position_tv"
-        app:layout_constraintTop_toBottomOf="@id/position_tv">
+        app:layout_constraintTop_toBottomOf="@id/position_tv" />
 
-        <kg.nurtelecom.ofd.sell.InfoCardCellView
-            android:id="@+id/product_price_ic"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </com.google.android.material.card.MaterialCardView>
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/product_count_cw"
+    <kg.nurtelecom.ofd.sell.CustomCardEditText
+        android:id="@+id/count_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/colorWhite"
         android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="@id/product_price_cw"
-        app:layout_constraintStart_toStartOf="@id/product_price_cw"
-        app:layout_constraintTop_toBottomOf="@id/product_price_cw">
-
-        <kg.nurtelecom.ofd.sell.InfoCardCellView
-            android:id="@+id/product_count_ic"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </com.google.android.material.card.MaterialCardView>
+        app:layout_constraintEnd_toEndOf="@id/price_edit_text"
+        app:layout_constraintStart_toStartOf="@id/price_edit_text"
+        app:layout_constraintTop_toBottomOf="@id/price_edit_text" />
 
     <LinearLayout
         android:id="@+id/group_buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:orientation="horizontal"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/product_count_cw">
+        app:layout_constraintTop_toBottomOf="@id/count_edit_text">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/product_discount_cw"
+        <kg.nurtelecom.ofd.sell.CustomCardEditText
+            android:id="@+id/skidka_edit_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:cardBackgroundColor="@color/colorWhite"
             android:layout_marginEnd="4dp"
             android:layout_weight="1"
-            android:color="@color/colorBlack"
-            app:layout_constraintEnd_toStartOf="@+id/product_discount_cw"
-            app:layout_constraintStart_toStartOf="@id/product_count_cw"
-            app:layout_constraintTop_toBottomOf="@id/product_count_cw">
+            app:layout_constraintEnd_toStartOf="@+id/skidka_edit_text"
+            app:layout_constraintStart_toStartOf="@id/count_edit_text"
+            app:layout_constraintTop_toBottomOf="@id/count_edit_text" />
 
-            <kg.nurtelecom.ofd.sell.InfoCardCellView
-                android:id="@+id/product_discount_ic"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </androidx.cardview.widget.CardView>
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/product_allowance_cw"
+        <kg.nurtelecom.ofd.sell.CustomCardEditText
+            android:id="@+id/allowance_edit_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:cardBackgroundColor="@color/colorWhite"
             android:layout_marginStart="4dp"
             android:layout_weight="1"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/product_count_cw">
+            app:layout_constraintTop_toBottomOf="@id/count_edit_text" />
 
-            <kg.nurtelecom.ofd.sell.InfoCardCellView
-                android:id="@+id/product_allowance_ic"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </com.google.android.material.card.MaterialCardView>
     </LinearLayout>
 
     <Button
         android:id="@+id/check_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/mask"
+        android:enabled="true"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="@color/colorGreen"
-        android:enabled="true"
         android:text="В ЧЕК"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
