--- a/ui/src/main/res/layout/card_view_sell.xml
+++ b/ui/src/main/res/layout/card_view_sell.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/card_view"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    tools:background="@drawable/mask">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@null"
         android:paddingStart="@dimen/padding_16dp"
         android:paddingTop="@dimen/padding_8dp"
         android:paddingEnd="@dimen/padding_16dp"
@@ -13,7 +18,7 @@
 
         <TextView
             android:id="@+id/card_title"
-            style="@style/InfoCardCellTitleTextStyle"
+            style="@style/GreenInfoCardCellTitleTextStyle"
             android:text="@string/title_text"
             android:textSize="@dimen/text_16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -21,7 +26,7 @@
 
         <EditText
             android:id="@+id/card_content"
-            style="@style/CardCellValueTextStyle"
+            style="@style/GreenInfoCardCellValueTextStyle"
             android:layout_width="0dp"
             android:layout_marginTop="5dp"
             android:background="@null"
@@ -44,3 +49,5 @@
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+</com.google.android.material.card.MaterialCardView>
