--- a/ui/src/main/res/layout/view_card.xml
+++ b/ui/src/main/res/layout/view_card.xml
@@ -5,7 +5,7 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:background="@drawable/rounded_green_background">
+    tools:background="@drawable/mask">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/container"
