--- a/ui/src/main/res/layout/info_card_cell_view.xml
+++ b/ui/src/main/res/layout/info_card_cell_view.xml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/card_view"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:background="@drawable/mask">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@null"
         android:paddingStart="@dimen/padding_16dp"
         android:paddingTop="@dimen/padding_8dp"
         android:paddingEnd="@dimen/padding_16dp"
@@ -18,7 +13,7 @@
 
         <TextView
             android:id="@+id/card_title"
-            style="@style/GreenInfoCardCellTitleTextStyle"
+            style="@style/InfoCardCellTitleTextStyle"
             android:text="@string/title_text"
             android:textSize="@dimen/text_16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +21,7 @@
 
         <EditText
             android:id="@+id/card_content"
-            style="@style/GreenInfoCardCellValueTextStyle"
+            style="@style/CardCellValueTextStyle"
             android:layout_width="0dp"
             android:layout_marginTop="5dp"
             android:background="@null"
@@ -49,5 +44,3 @@
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-</com.google.android.material.card.MaterialCardView>
