--- a/sell/src/main/res/layout/checks_history_details_component_view.xml
+++ b/sell/src/main/res/layout/checks_history_details_component_view.xml
@@ -6,11 +6,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <kg.nurtelecom.sell.ui.fragment.history.ScrollDisabledListView
+    <ListView
         android:id="@+id/checksHistoryDetailsList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:clickable="false"
+        android:divider="@color/grey"
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/detail_view" />
 </androidx.constraintlayout.widget.ConstraintLayout>
