--- a/ui/src/main/res/values/styles.xml
+++ b/ui/src/main/res/values/styles.xml
@@ -16,6 +16,9 @@
         <item name="android:background">@color/black</item>
         <item name="titleTextColor">@color/textWhite</item>
         <item name="titleTextAppearance">@style/ToolbarTextAppearance</item>
+    <style name="ButtonTextAppearance" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">@dimen/text_14sp</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="BaseTextStyle">
@@ -126,8 +129,7 @@
     <style name="BaseButtonStyle" parent="Widget.MaterialComponents.Button">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">@dimen/text_14sp</item>
+        <item name="android:textAppearance">@style/ButtonTextAppearance</item>
     </style>
 
     <style name="GreenButtonStyle" parent="BaseButtonStyle">
