--- a/user/src/main/res/layout/activity_user.xml
+++ b/user/src/main/res/layout/activity_user.xml
@@ -7,28 +7,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/black">
 
-    <androidx.appcompat.widget.Toolbar
+    <kg.nurtelecom.ofd.toolbar.MainToolbar
         android:id="@+id/main_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:padding="@dimen/margin_16dp"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:navigationIcon="@drawable/abc_vector_test"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <TextView
-            android:layout_width="238dp"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto_thin"
-            android:gravity="center_vertical"
-            android:text="@string/text_profile"
-            android:textColor="@color/white"
-            android:textSize="@dimen/text_20sp"
-            android:layout_marginStart="@dimen/margin_16dp"
-            />
-
-    </androidx.appcompat.widget.Toolbar>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/et_Surname"/>
 
     <com.google.android.material.textfield.TextInputEditText
 
@@ -86,7 +72,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/et_Identification"/>
 
-    <com.google.android.material.textfield.TextInputEditText
+    <kg.nurtelecom.ofd.edittext.InputTextField
 
         android:id="@+id/et_Identification"
         android:layout_width="match_parent"
@@ -99,7 +85,6 @@
         app:layout_constraintTop_toBottomOf="@id/et_Phone"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
-
 
     <Button
         android:id="@+id/btn_Change"
