--- a/app/src/main/res/layout/fragment_greeting.xml
+++ b/app/src/main/res/layout/fragment_greeting.xml
@@ -87,4 +87,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <Button
+        android:id="@+id/btn_temp_credit"
+        style="@style/GreenButtonStyle"
+        android:text="Temp - Credit"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
