--- a/sell/src/main/res/layout/activity_sell_main.xml
+++ b/sell/src/main/res/layout/activity_sell_main.xml
@@ -11,6 +11,7 @@
         android:id="@+id/tb_sell_main"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        android:theme="@style/ToolbarColoredBackArrow"
         android:background="@color/black"
         android:fitsSystemWindows="true"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +44,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:padding="@dimen/margin_16dp"
-                    android:text="@string/non_fiscal_mode_message"
+                    android:text="@string/non_fiscal_mode_dialog_content"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textSize="@dimen/text_16sp"
