--- a/ui/src/main/res/values/styles.xml
+++ b/ui/src/main/res/values/styles.xml
@@ -159,4 +159,10 @@
         <item name="android:textColorSecondary">@color/white</item>
     </style>
 
+    <style name="ToolbarSearchStyle">
+        <item name="android:textColorSecondary">@color/white</item>
+        <item name="android:textColorHint">@color/white</item>
+        <item name="android:textColorPrimary">@color/white</item>
+    </style>
+
 </resources>
