--- a/user/src/main/res/layout/activity_user.xml
+++ b/user/src/main/res/layout/activity_user.xml
@@ -19,6 +19,7 @@
     <kg.nurtelecom.ofd.edittext.EditTextField
         android:id="@+id/et_surname"
         android:layout_width="match_parent"
+        android:hint="Фамилия"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintRight_toRightOf="parent"
@@ -29,6 +30,7 @@
         android:id="@+id/et_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="Имя"
         app:layout_constraintTop_toBottomOf="@+id/et_surname"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -38,6 +40,7 @@
         android:id="@+id/et_middlename"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="Отчество"
         app:layout_constraintTop_toBottomOf="@+id/et_name"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -47,6 +50,7 @@
         android:id="@+id/et_phone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="+996"
         app:layout_constraintTop_toBottomOf="@+id/et_middlename"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -55,6 +59,7 @@
     <kg.nurtelecom.ofd.edittext.EditTextField
         android:id="@+id/et_identification"
         android:layout_width="match_parent"
+        android:hint="ИНН"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/et_phone"
         app:layout_constraintRight_toRightOf="parent"
