--- a/sell/src/main/res/layout/add_product_fragment.xml
+++ b/sell/src/main/res/layout/add_product_fragment.xml
@@ -27,6 +27,7 @@
         android:layout_height="@dimen/margin_0dp"
         android:layout_marginTop="@dimen/margin_16dp"
         android:padding="@dimen/margin_8dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
