--- a/sell/src/main/res/layout/fragment_save_receipt.xml
+++ b/sell/src/main/res/layout/fragment_save_receipt.xml
@@ -45,16 +45,59 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_cashiers_check" />
 
+    <ImageView
+        android:id="@+id/iv_horizontal_line"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:src="@drawable/horizontal_line"
+        android:background="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_receipt_number" />
+
+    <TextView
+        android:id="@+id/tv_product_name"
+        android:layout_width="@dimen/margin_0dp"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:hint="ProductName"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="@id/guideline"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_horizontal_line" />
+
     <TextView
         android:id="@+id/tv_receipt_items"
         android:layout_width="@dimen/margin_0dp"
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:hint="ReceiptItems"
+        android:gravity="right"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/guideline"
+        app:layout_constraintTop_toBottomOf="@id/iv_horizontal_line" />
+
+    <ImageView
+        android:id="@+id/iv_horizontal_line_2"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:src="@drawable/horizontal_line"
+        android:background="@color/white"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_receipt_number" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_receipt_items" />
+
+    <TextView
+        android:id="@+id/tv_total_prices_text"
+        android:layout_width="@dimen/margin_0dp"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:hint="TotalPrices"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="@id/guideline"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_horizontal_line_2" />
 
     <TextView
         android:id="@+id/tv_total_prices"
@@ -62,10 +105,21 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:hint="TotalPrices"
+        android:gravity="right"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/guideline"
+        app:layout_constraintTop_toBottomOf="@id/iv_horizontal_line_2" />
+
+    <ImageView
+        android:id="@+id/iv_horizontal_line_3"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:src="@drawable/horizontal_line"
+        android:background="@color/white"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_receipt_items" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_total_prices" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_print_check"
@@ -76,5 +130,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintGuide_begin="180dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
