--- a/sell/src/main/res/layout/fragment_save_receipt.xml
+++ b/sell/src/main/res/layout/fragment_save_receipt.xml
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/size_0dp"
             android:padding="@dimen/margin_16dp"
-            android:visibility="visible"
+            android:visibility="gone"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
