--- a/ui/src/main/res/layout/product_cell_view.xml
+++ b/ui/src/main/res/layout/product_cell_view.xml
@@ -4,6 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_layout"
+    android:layout_marginTop="@dimen/margin_8dp"
+    android:layout_marginLeft="@dimen/margin_8dp"
+    android:layout_marginRight="@dimen/margin_8dp"
     style="@style/ProductCellViewStyle">
 
     <CheckBox
