--- a/ui/src/main/res/values/styles.xml
+++ b/ui/src/main/res/values/styles.xml
@@ -145,6 +145,12 @@
         <item name="backgroundTint">@color/blue</item>
     </style>
 
+    <style name="WhiteButtonStyle" parent="BaseButtonStyle">
+        <item name="backgroundTint">@color/white</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="rippleColor">@color/grey</item>
+    </style>
+
     <style name="DashedBorderButtonStyle" parent="BaseButtonStyle">
         <item name="backgroundTint">@color/grey</item>
         <item name="android:background">@drawable/bg_dashed_border</item>
