--- a/auth/src/main/res/layout-v21/auth_activity.xml
+++ b/auth/src/main/res/layout-v21/auth_activity.xml
@@ -8,13 +8,12 @@
 
     <ProgressBar
         style="?android:attr/progressBarStyleHorizontal"
+        android:indeterminate="true"
         android:indeterminateTintMode="src_atop"
         android:indeterminateTint="@color/green"
-        android:layout_marginTop="-7dp"
         android:id="@+id/progressbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,18 +21,6 @@
         android:layout_centerInParent="true"
         android:orientation="vertical"
         tools:ignore="UselessParent">
-
-        <TextView
-            android:id="@+id/tv_error"
-            android:background="@color/red"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="@dimen/margin_8dp"
-            android:paddingBottom="@dimen/margin_8dp"
-            android:paddingStart="@dimen/margin_16dp"
-            android:text="@string/tv_error"
-            android:textColor="@color/white"
-            android:textSize="@dimen/text_16sp" />
 
         <kg.nurtelecom.ofd.edittext.EditTextField
             android:id="@+id/et_login"
