--- a/auth/src/main/res/layout/auth_activity.xml
+++ b/auth/src/main/res/layout/auth_activity.xml
@@ -7,13 +7,10 @@
     android:background="@color/black">
 
     <ProgressBar
-        style="?android:attr/progressBarStyleHorizontal"
-        android:indeterminateTintMode="src_atop"
-        android:indeterminateTint="@color/green"
-        android:layout_marginTop="-7dp"
+        style="@android:style/Widget.ProgressBar.Horizontal"
         android:id="@+id/progressbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="4dp" />
 
 
     <LinearLayout
@@ -28,12 +25,13 @@
             android:background="@color/red"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="@dimen/margin_8dp"
-            android:paddingBottom="@dimen/margin_8dp"
+            android:paddingTop="@dimen/margin_16dp"
+            android:paddingBottom="@dimen/margin_16dp"
             android:paddingStart="@dimen/margin_16dp"
             android:text="@string/tv_error"
             android:textColor="@color/white"
-            android:textSize="@dimen/text_16sp" />
+            android:textSize="@dimen/text_16sp"
+            tools:ignore="RtlSymmetry" />
 
         <kg.nurtelecom.ofd.edittext.EditTextField
             android:id="@+id/et_login"
